@@ -33,6 +33,7 @@
 #include "fileattr.h"
 #include "gpg.h"
 #include "ignore.h"
+#include "lock.h"
 #include "repos.h"
 #include "watch.h"
 #include "wrapper.h"
